--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="helsinki.cs.mobiilitiedekerho.mobiilitiedekerho">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -23,6 +24,7 @@
 
     <uses-feature android:name="android.hardware.camera"
         android:required="false" />
+
 
 
 
